<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indoor_nav2_bringup</name>
  <version>0.1.0</version>
  <description>Nav2 bringup for Indoor_nav2: maps, parameters, and launch files for localization and (later) navigation. Intended to be reused unchanged across simulation and real hardware.</description>
  <maintainer email="tjsdn3065@gmail.com">irl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>nav2_voronoi_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <exec_depend>indoor_nav2_rtabmap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
