<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indoor_nav2_rtabmap</name>
  <version>0.1.0</version>
  <description>RTAB-Map based SLAM and localization for Indoor_nav2. Provides mapping and localization launch files that pair with sim_bringup (Gazebo) and the real Unitree Go2, replacing AMCL + map_server when used.</description>
  <maintainer email="tjsdn3065@gmail.com">irl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
